fixed truncation error on pin details

--- a/react-app/src/components/Pins/Pins.css
+++ b/react-app/src/components/Pins/Pins.css
@@ -1,6 +1,7 @@
 .single-pin-container {
   display: flex;
   justify-content: center;
+  width: 720px;
   height: 75%;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
   border-radius: 21px;
@@ -79,6 +80,9 @@
   margin-bottom: 15px;
 }
 
+.form-content .on-submit-errors {
+  color: red;
+}
 
 
 .user-details {
@@ -172,6 +176,10 @@
   padding-left: 20px;
 }
 
+.form-image img {
+  object-fit: cover;
+}
+
 .edit-pin-container p {
   margin-bottom: 20px;
   color: #333;
@@ -250,10 +258,10 @@
 
 .single-pin-image {
   height: 100%;
-  width: 100%;
+  width: 360px;
   border-top-left-radius: 21px;
   border-bottom-left-radius: 21px;
-  object-fit: cover;
+  /* object-fit: cover; */
 
 }
 
@@ -270,8 +278,9 @@
 
 .pin-title-description-container {
   padding: 30px;
-
+  width: 360px
 }
+
 
 .pin-title-description {
   margin-top: 100px;
@@ -319,4 +328,7 @@
 
 }
 
+.detail-pin-image-container {
+  width: 360px
+}
 
